[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/map_elements/Station.gd" type="Script" id=1]
[ext_resource path="res://prefabs/SkillMenuLayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/map_elements/gen_anim.png" type="Texture" id=4]
[ext_resource path="res://sprites/cinematics/station_access.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.8944, 40.4355 )

[sub_resource type="Animation" id=2]
resource_name = "Station"
length = 5.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2, 3.6, 4, 4.4, 4.8, 5.2, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "activate_skill_menu"
} ]
}

[node name="WorkStation" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.86554, -8.32116 )
shape = SubResource( 1 )

[node name="StationTexture" type="Sprite" parent="."]
pause_mode = 2
texture = ExtResource( 4 )
hframes = 3
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="StationTexture"]
pause_mode = 2
playback_speed = 2.2
anims/Station = SubResource( 2 )

[node name="TeleportSound" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 5 )

[node name="StationAccessSound" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 5 )

[node name="SkillMenuLayer" parent="." instance=ExtResource( 2 )]
